--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -1040,6 +1040,13 @@
                             </property>
                            </widget>
                           </item>
+                           <item>
+                             <widget class="QRadioButton" name="advOutTrack5">
+                               <property name="text">
+                                 <string notr="true">5</string>
+                               </property>
+                             </widget>
+                           </item>
                          </layout>
                         </widget>
                        </item>
@@ -1383,6 +1390,13 @@
                                 </property>
                                </widget>
                               </item>
+                               <item>
+                                 <widget class="QCheckBox" name="advOutRecTrack5">
+                                   <property name="text">
+                                     <string notr="true">5</string>
+                                   </property>
+                                 </widget>
+                               </item>
                              </layout>
                             </widget>
                            </item>
@@ -1750,6 +1764,13 @@
                           </property>
                          </widget>
                         </item>
+                         <item>
+                           <widget class="QRadioButton" name="advOutFFTrack5">
+                             <property name="text">
+                               <string notr="true">5</string>
+                             </property>
+                           </widget>
+                         </item>
                        </layout>
                       </widget>
                      </item>
@@ -2333,6 +2354,131 @@
                       </layout>
                      </widget>
                     </item>
+
+
+
+
+                     <item>
+                       <widget class="QGroupBox" name="groupBox_custom_1">
+                         <property name="sizePolicy">
+                           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+                             <horstretch>0</horstretch>
+                             <verstretch>0</verstretch>
+                           </sizepolicy>
+                         </property>
+                         <property name="title">
+                           <string>Basic.Settings.Output.Adv.Audio.Track5</string>
+                         </property>
+                         <layout class="QFormLayout" name="formLayout_custom_1">
+                           <property name="fieldGrowthPolicy">
+                             <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+                           </property>
+                           <property name="labelAlignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                           </property>
+                           <item row="0" column="0">
+                             <widget class="QLabel" name="label_custom_1">
+                               <property name="minimumSize">
+                                 <size>
+                                   <width>170</width>
+                                   <height>0</height>
+                                 </size>
+                               </property>
+                               <property name="text">
+                                 <string>Basic.Settings.Output.AudioBitrate</string>
+                               </property>
+                               <property name="alignment">
+                                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                               </property>
+                               <property name="buddy">
+                                 <cstring>advOutTrack5Bitrate</cstring>
+                               </property>
+                             </widget>
+                           </item>
+                           <item row="0" column="1">
+                             <widget class="QComboBox" name="advOutTrack5Bitrate">
+                               <property name="currentIndex">
+                                 <number>8</number>
+                               </property>
+                               <item>
+                                 <property name="text">
+                                   <string>32</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>48</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>64</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>80</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>96</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>112</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>128</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>160</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>192</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>256</string>
+                                 </property>
+                               </item>
+                               <item>
+                                 <property name="text">
+                                   <string>320</string>
+                                 </property>
+                               </item>
+                             </widget>
+                           </item>
+                           <item row="1" column="0">
+                             <widget class="QLabel" name="label_custom_2">
+                               <property name="text">
+                                 <string>Name</string>
+                               </property>
+                               <property name="buddy">
+                                 <cstring>advOutTrack5Name</cstring>
+                               </property>
+                             </widget>
+                           </item>
+                           <item row="1" column="1">
+                             <widget class="QLineEdit" name="advOutTrack5Name"/>
+                           </item>
+                         </layout>
+                       </widget>
+                     </item>
+                     
+                     
+                     
+                     
+                     
+                     
                    </layout>
                   </widget>
                  </item>
