UI: Add system tray capability
This adds a system tray when enabled. There is also a option to minimize
to the system tray when the app is started.

Closes jp9000/obs-studio#595

--- a/obs/forms/obs.qrc
+++ b/obs/forms/obs.qrc
@@ -13,6 +13,7 @@
     <file>images/properties.png</file>
     <file>images/up.png</file>
     <file>images/obs.png</file>
+    <file>images/tray_active.png</file>
   </qresource>
   <qresource prefix="/settings">
     <file>images/settings/advanced.png</file>
