UI: Add option to make projectors always on top
Closes jp9000/obs-studio#563

--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -185,21 +185,21 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="1">
+         <item row="7" column="1">
           <widget class="QCheckBox" name="recordWhenStreaming">
            <property name="text">
             <string>Basic.Settings.General.RecordWhenStreaming</string>
            </property>
           </widget>
          </item>
-         <item row="8" column="1">
+         <item row="9" column="1">
           <widget class="QCheckBox" name="systemTrayEnabled">
            <property name="text">
             <string>Basic.Settings.General.SysTrayEnabled</string>
            </property>
           </widget>
          </item>
-         <item row="9" column="1">
+         <item row="10" column="1">
           <widget class="QCheckBox" name="systemTrayWhenStarted">
            <property name="enabled">
             <bool>false</bool>
@@ -209,14 +209,14 @@
            </property>
           </widget>
          </item>
-         <item row="10" column="0" colspan="2">
+         <item row="11" column="0" colspan="2">
           <widget class="Line" name="line_4">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
-         <item row="11" column="0" colspan="2">
+         <item row="12" column="0" colspan="2">
           <widget class="QGroupBox" name="groupBox_10">
            <property name="enabled">
             <bool>true</bool>
@@ -316,13 +316,20 @@
            </property>
           </widget>
          </item>
-         <item row="7" column="1">
+         <item row="8" column="1">
           <widget class="QCheckBox" name="keepRecordStreamStops">
            <property name="enabled">
             <bool>false</bool>
            </property>
            <property name="text">
             <string>Basic.Settings.General.KeepRecordingWhenStreamStops</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1">
+          <widget class="QCheckBox" name="projectorAlwaysOnTop">
+           <property name="text">
+            <string>Basic.Settings.General.ProjectorAlwaysOnTop</string>
            </property>
           </widget>
          </item>
@@ -2538,8 +2545,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>98</width>
-              <height>28</height>
+              <width>80</width>
+              <height>16</height>
              </rect>
             </property>
            </widget>
@@ -2903,9 +2910,9 @@
             <property name="geometry">
              <rect>
               <x>0</x>
-              <y>-206</y>
-              <width>803</width>
-              <height>820</height>
+              <y>0</y>
+              <width>559</width>
+              <height>681</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_16">
